<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>mpc4j</artifactId>
        <groupId>edu.alibaba</groupId>
        <version>1.1.4-beta</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>mpc4j-s2pc-aby</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.googlecode.javaewah</groupId>
            <artifactId>JavaEWAH</artifactId>
        </dependency>
        <dependency>
            <groupId>edu.alibaba</groupId>
            <artifactId>mpc4j-common-tool</artifactId>
            <version>1.1.4-beta</version>
        </dependency>
        <dependency>
            <groupId>edu.alibaba</groupId>
            <artifactId>mpc4j-common-rpc</artifactId>
            <version>1.1.4-beta</version>
        </dependency>
        <dependency>
            <groupId>edu.alibaba</groupId>
            <artifactId>mpc4j-common-circuit</artifactId>
            <version>1.1.4-beta</version>
        </dependency>
        <dependency>
            <groupId>edu.alibaba</groupId>
            <artifactId>mpc4j-common-structure</artifactId>
            <version>1.1.4-beta</version>
        </dependency>
        <dependency>
            <groupId>edu.alibaba</groupId>
            <artifactId>mpc4j-s2pc-pcg</artifactId>
            <version>1.1.4-beta</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.opencsv</groupId>
            <artifactId>opencsv</artifactId>
        </dependency>
    </dependencies>

    <!-- 下面是用于打包的插件，如果不用这个插件导出jar可能会出现问题 -->
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>
            <plugin>
                <!--suppress MavenModelInspection -->
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifest>
                            <mainClass>edu.alibaba.mpc4j.s2pc.aby.main.AbyMain</mainClass>
                        </manifest>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>